--- a/02_Doc2Vec_Embeddings.ipynb
+++ b/02_Doc2Vec_Embeddings.ipynb
@@ -5143,7 +5143,7 @@
    "id": "51798bbd",
    "metadata": {},
    "source": [
-    "## Add engineered features to tesy data"
+    "## Add engineered features to test data"
    ]
   },
   {
@@ -5739,7 +5739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (default, Nov 15 2020, 08:30:55) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
